--- a/.github/workflows/aws-params-env-action-check-dist.yml
+++ b/.github/workflows/aws-params-env-action-check-dist.yml
@@ -10,6 +10,10 @@ on:
     paths:
       - 'actions/aws-params-env-action/**'
       - '!actions/aws-params-env-action/**.md'
+  pull_request:
+    paths:
+      - 'actions/aws-params-env-action/**'
+      - '!actions/aws-params-env-action/**.md'
   workflow_dispatch:
 
 defaults:
