--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@ node_modules
 # Ignore built ts files
 /actions/aws-params-env-action/__tests__/runner/*
 /actions/aws-params-env-action/lib/**/*
+
+terraform.tfstate*
+terraform.tfvars
+.terraform
+
+/terraform/services/github-actions/lambdas-download/*.zip
