Convert terraform-plan into a reusable workflow

--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -1,11 +1,7 @@
-
 name: Terraform Plan
 
 on:
-  pull_request:
-    paths:
-      - 'terraform/services/github-actions/**' # Specify the path to trigger the workflow
-  workflow_dispatch: # Allow manual trigger
+  workflow_call:
 
 env:
     TEAM: ${{ github.event.inputs.team }}
@@ -15,6 +11,10 @@ env:
 permissions:
     id-token: write   # This is required for requesting the JWT
     contents: read    # This is required for actions/checkout
+
+defaults:
+  run:
+    working-directory: ./terraform
 
 jobs:
   terraform-apply:
@@ -27,21 +27,7 @@ jobs:
       - name: Install tfenv
         run: |
           git clone https://github.com/tfutils/tfenv.git ~/.tfenv
-          echo 'export PATH="$HOME/.tfenv/bin:$PATH"' >> ~/.bashrc
-          source ~/.bashrc
-        shell: bash
-
-      - name: Set Terraform version
-        run: |
-          expect=1.5.5
-          tfenv install "${expect}"
-          tfenv use "${expect}"
-        shell: bash
-
-      - name: Check Terraform version
-        run: |
-          terraform version
-        shell: bash
+          echo "PATH=$HOME/.tfenv/bin:$PATH" >> "$GITHUB_ENV"
 
       - name: configure aws credentials
         uses: aws-actions/configure-aws-credentials@v3
@@ -49,17 +35,8 @@ jobs:
           role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_NUMBER }}:role/github-to-aws-oidc
           aws-region: us-east-1
 
-      - name: Download and Unzip Lambda Zip Files
-        run: |
-          mkdir -p lambda
-          wget -O lambdas/lambda.zip https://github.com/philips-labs/terraform-aws-github-runner/tree/d0e89608f52ff0db4abe204af6718a73e780ea98/examples/lambdas-dowhnload
-          unzip lambdas/lambda.zip -d lambda/
-
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v2
-
       - name: Terraform Init
         run: terraform init -reconfigure -backend-config=../../backends/${TEAM}-${ENVIRONMENT}.s3.tfbackend
 
       - name: Terraform plan
-        run: terraform ${{ env.ACTION }} 
+        run: terraform ${{ env.ACTION }}
