Add missing runs-on in workflow yaml

--- a/.github/workflows/github-actions-terraform-plan.yml
+++ b/.github/workflows/github-actions-terraform-plan.yml
@@ -17,5 +17,6 @@ jobs:
       working-directory: ./terraform/services/github-actions
 
   terraform-plan:
+    runs-on: ubuntu-latest
     steps:
       - run: echo "TODO Create a reusable terraform-plan workflow to call'
