Make terraform-plan dependent on check-terraform-fmt
We want to check formatting before we run the plan, and fail first if
the check fails. I also corrected a quote in the TODO echo

--- a/.github/workflows/github-actions-terraform-plan.yml
+++ b/.github/workflows/github-actions-terraform-plan.yml
@@ -17,6 +17,7 @@ jobs:
       working-directory: ./terraform/services/github-actions
 
   terraform-plan:
+    needs: check-terraform-fmt
     runs-on: ubuntu-latest
     steps:
-      - run: echo "TODO Create a reusable terraform-plan workflow to call'
+      - run: echo "TODO Create a reusable terraform-plan workflow to call"
