--- a/.github/workflows/terraform-fmt.yml
+++ b/.github/workflows/terraform-fmt.yml
@@ -18,6 +18,7 @@ jobs:
         run: |
           git clone https://github.com/tfutils/tfenv.git ~/.tfenv
           echo "PATH=$HOME/.tfenv/bin:$PATH" >> "$GITHUB_ENV"
+          echo "TFENV_CURL_OUTPUT=0" >> "$GITHUB_ENV"
 
       - name: Check terraform format
         working-directory: ${{ inputs.working-directory }}
