--- a/.github/workflows/terraform-fmt.yml
+++ b/.github/workflows/terraform-fmt.yml
@@ -18,13 +18,10 @@ jobs:
         run: |
           git clone https://github.com/tfutils/tfenv.git ~/.tfenv
           echo "PATH=$HOME/.tfenv/bin:$PATH" >> "$GITHUB_ENV"
-          echo "TFENV_CURL_OUTPUT=0" >> "$GITHUB_ENV"
 
       - name: Install terraform
         working-directory: ./terraform
-        run: |
-          tfenv install
-          tfenv use
+        run: TFENV_CURL_OUTPUT=0 tfenv use
 
       - name: Check terraform format
         run: terraform fmt -check -diff -recursive ${{ inputs.targets }}
