Add manual trigger for terraform-fmt
And make ./terraform the default target.

--- a/.github/workflows/terraform-fmt.yml
+++ b/.github/workflows/terraform-fmt.yml
@@ -4,7 +4,14 @@ on:
   workflow_call:
     inputs:
       targets:
-        required: true
+        required: false
+        default: ./terraform
+        type: string
+  workflow_dispatch:
+    inputs:
+      targets:
+        required: false
+        default: ./terraform
         type: string
 
 jobs:
