--- a/.github/workflows/build-runner-images.yml
+++ b/.github/workflows/build-runner-images.yml
@@ -13,6 +13,9 @@ jobs:
     defaults:
       run:
         working-directory: packer/github-actions-runner
+    permissions:
+      id-token: write
+      contents: read
     steps:
       - name: Checkout
         uses: actions/checkout@v4
