PLT-193 Fix for github-actions terraform plan workflow (#17)
## 🎫 Ticket

https://jira.cms.gov/browse/PLT-193

## 🛠 Changes

Adjusting the workflow for terraform plan on github-actions to allow it
to run.

## ℹ️ Context for reviewers

With merge of #16 we have the github-actions-terraform-plan workflow in
main, and now I can see errors to fix.

## ✅ Acceptance Validation

See checks in this PR for successful run of the workflow.

## 🔒 Security Implications

- [ ] This PR adds a new software dependency or dependencies.
- [ ] This PR modifies or invalidates one or more of our security
controls.
- [ ] This PR stores or transmits data that was not stored or
transmitted before.
- [ ] This PR requires additional review of its security implications
for other reasons.

If any security implications apply, add Jason Ashbaugh (GitHub username:
StewGoin) as a reviewer and do not merge this PR without his approval.

--- a/.github/workflows/github-actions-terraform-plan.yml
+++ b/.github/workflows/github-actions-terraform-plan.yml
@@ -3,7 +3,10 @@ name: Terraform plan for github-actions terraform
 on:
   pull_request:
     paths:
-      - 'terraform/services/github-actions/**' # Specify the path to trigger the workflow
+      - .github/workflows/github-actions-terraform-plan.yml
+      - .github/workflows/terraform-fmt.yml
+      - actions/setup-tfenv-terraform/**
+      - terraform/services/github-actions/**
   workflow_dispatch: # Allow manual trigger
 
 permissions:
@@ -14,8 +17,10 @@ jobs:
   check-terraform-fmt:
     uses: ./.github/workflows/terraform-fmt.yml
     with:
-      working-directory: ./terraform/services/github-actions
+      targets: ./terraform/services/github-actions
 
   terraform-plan:
+    needs: check-terraform-fmt
+    runs-on: ubuntu-latest
     steps:
-      - run: echo "TODO Create a reusable terraform-plan workflow to call'
+      - run: echo "TODO Create a reusable terraform-plan workflow to call"
