Add auto-approve to lambdas-download apply

--- a/.github/workflows/github-actions-terraform-plan.yml
+++ b/.github/workflows/github-actions-terraform-plan.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           cd lambdas-download
           terraform init
-          terraform apply
+          terraform apply -auto-approve
           cd ..
       - uses: aws-actions/configure-aws-credentials@v3
         with:
