PLT-193 Terraform plan & apply workflows (#13)
Co-authored-by: Maboh Christopher <chrismaboh@Mabohs-MBP.lan>
Co-authored-by: Sean Fern <seanfern@navapbc.com>

--- a/.github/workflows/github-actions-terraform-plan.yml
+++ b/.github/workflows/github-actions-terraform-plan.yml
@@ -4,23 +4,39 @@ on:
   pull_request:
     paths:
       - .github/workflows/github-actions-terraform-plan.yml
-      - .github/workflows/terraform-fmt.yml
       - actions/setup-tfenv-terraform/**
       - terraform/services/github-actions/**
   workflow_dispatch: # Allow manual trigger
 
-permissions:
-  id-token: write # This is required for requesting the JWT
-  contents: read  # This is required for actions/checkout
-
 jobs:
   check-terraform-fmt:
-    uses: ./.github/workflows/terraform-fmt.yml
-    with:
-      targets: ./terraform/services/github-actions
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: ./actions/setup-tfenv-terraform
+      - run: terraform fmt -check -diff -recursive ./terraform/services/github-actions
 
   terraform-plan:
     needs: check-terraform-fmt
+    permissions:
+      contents: read
+      id-token: write
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./terraform/services/github-actions
     steps:
-      - run: echo "TODO Create a reusable terraform-plan workflow to call"
+      - uses: actions/checkout@v4
+      - uses: ./actions/setup-tfenv-terraform
+      - uses: aws-actions/configure-aws-credentials@v3
+        with:
+          role-to-assume: ${{ vars.RUNNER_ACCOUNT_ROLE }}
+          aws-region: us-east-1
+      - run: terraform init -reconfigure -backend-config=../../backends/bcda.s3.tfbackend
+      - run: terraform plan
+        env:
+          TF_VAR_ami_account: ${{ vars.RUNNER_AMI_ACCOUNT }}
+          TF_VAR_ami_filter: ${{ vars.RUNNER_AMI_FILTER }}
+          TF_VAR_app_id: ${{ vars.RUNNER_APP_ID }}
+          TF_VAR_key_base64: ${{ secrets.RUNNER_APP_KEY_BASE64 }}
+          TF_VAR_webhook_secret: ${{ secrets.RUNNER_WEBHOOK_SECRET }}
