--- a/.github/workflows/github-actions-terraform-apply.yml
+++ b/.github/workflows/github-actions-terraform-apply.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+    paths:
+      - .github/workflows/github-actions-terraform-plan.yml
+      - terraform/services/github-actions/**
   workflow_dispatch: # Allow manual trigger
 
 jobs:
