--- a/.github/workflows/build-runner-images.yml
+++ b/.github/workflows/build-runner-images.yml
@@ -32,6 +32,15 @@ jobs:
           role-to-assume: arn:aws:iam::${{ vars.RUNNER_ACCOUNT }}:role/github-to-aws-oidc
           aws-region: us-east-1
 
+      - name: Retrieve default VPC ID and subnet
+        id: vpc
+        run: |
+          VPC_ID=`aws ec2 describe-vpcs --filters "Name=bcda-managed-vpc, Values=true" --query 'Vpcs[].VpcId' --output text`
+          echo "VPC_ID=$VPC_ID" >> "$GITHUB_ENV"
+
+          SUBNET_ID=`aws ec2 describe-subnets --filters "Name=vpc-id,Values=$VPC_ID" --query 'Subnets[0].SubnetId' --output text`
+          echo "SUBNET_ID=$SUBNET_ID" >> "$GITHUB_ENV"
+
       - name: Setup `packer`
         uses: hashicorp/setup-packer@main
         id: setup
@@ -44,8 +53,8 @@ jobs:
 
       - name: Run `packer validate`
         id: validate
-        run: packer validate -var ami_account="$AMI_ACCOUNT" -var ami_filter="$AMI_FILTER" -evaluate-datasources .
+        run: packer validate -var ami_account="$AMI_ACCOUNT" -var ami_filter="$AMI_FILTER" -var vpc_id="$VPC_ID" -var subnet_id="$SUBNET_ID" -evaluate-datasources .
 
       - name: Packer Build
         id: build
-        run: packer build -color=false -on-error=cleanup -var ami_account="$AMI_ACCOUNT" -var ami_filter="$AMI_FILTER" .
+        run: packer build -color=false -on-error=cleanup -var ami_account="$AMI_ACCOUNT" -var ami_filter="$AMI_FILTER" -var vpc_id="$VPC_ID" -var subnet_id="$SUBNET_ID" .
